--- a/packages/builders/package.json
+++ b/packages/builders/package.json
@@ -1,13 +1,14 @@
 {
     "name": "@angular-web3/builders",
-    "version": "2.1.2",
-    "description": "A set of ethereum related builders and schematics for angular-cli",
+    "version": "0.0.1-0",
+    "description": "A set of ethereum related builders for angular-cli",
     "main": "index.js",
     "typings": "typings/index.d.ts",
     "license": "MIT",
     "engines": {
         "node": ">=8.9"
     },
+    "author": "Simon Boissonneault-Robert",
     "keywords": [
         "cli",
         "angular",
