--- a/packages/builders/package.json
+++ b/packages/builders/package.json
@@ -1,12 +1,15 @@
 {
     "name": "@angular-web3/builders",
-    "version": "0.0.1-0",
+    "version": "0.0.2-0",
     "description": "A set of ethereum related builders for angular-cli",
     "main": "index.js",
     "typings": "typings/index.d.ts",
     "license": "MIT",
     "engines": {
         "node": ">=8.9"
+    },
+    "publishConfig": {
+        "access": "public"
     },
     "author": "Simon Boissonneault-Robert",
     "keywords": [
