--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,8 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.2-0"
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "0.0.3-0"
 }
