--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-web3/schematics",
-  "version": "0.0.10-0",
+  "version": "0.0.11-0",
   "description": "A set of angular-cli schematics related to ethereum development",
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -24,5 +24,8 @@
     "@types/node": "^8.0.31",
     "jasmine": "^2.8.0",
     "typescript": "^2.5.2"
-  }
+  },
+  "files": [
+    "*"
+  ]
 }
