--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -25,6 +25,10 @@
     "jasmine": "^2.8.0",
     "typescript": "^2.5.2"
   },
+  "devDependencies": {
+    "@angular/cli": "^6.1.3",
+    "@schematics/angular": "^0.7.3"
+  },
   "files": [
     "*"
   ]
